恢复构建相关的代码