@@ -17,7 +17,6 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
-import java.security.MessageDigest;
 
 public class BuildTools {
 
@@ -28,10 +27,6 @@ public class BuildTools {
     private final Path path;
     private final String version;
     private final int majorVersion;
-    private final String yarnVersionFallback;
-    private final String fabricLoaderVersionFallback;
-    private final String fabricApiVersionFallback;
-    private final String modMenuVersionFallback;
 
     public BuildTools(String minecraftVersion, String loader, Project project) throws IOException {
         this.minecraftVersion = minecraftVersion;
@@ -40,53 +35,14 @@ public class BuildTools {
         version = project.getVersion().toString();
         majorVersion = Integer.parseInt(minecraftVersion.split("\\.")[1]);
         javaLanguageVersion = majorVersion <= 16 ? 8 : majorVersion == 17 ? 16 : 17;
-        yarnVersionFallback = (String) project.findProperty("yarnVersion");
-        fabricLoaderVersionFallback = (String) project.findProperty("fabricLoaderVersion");
-        fabricApiVersionFallback = (String) project.findProperty("fabricApiVersion");
-        modMenuVersionFallback = (String) project.findProperty("modMenuVersion");
-    }
-
-    private static Path getCacheDir() {
-        final Path cacheDir = Path.of(System.getProperty("user.home"), ".gradle", "buildtools-cache");
-        try {
-            Files.createDirectories(cacheDir);
-        } catch (Exception e) {
-            LOGGER.error("Failed to create cache directory", e);
-        }
-        return cacheDir;
-    }
-
-    private static String hashUrl(String url) {
-        try {
-            final MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            final byte[] hash = digest.digest(url.getBytes(StandardCharsets.UTF_8));
-            final StringBuilder sb = new StringBuilder();
-            for (byte b : hash) {
-                sb.append(String.format("%02x", b));
-            }
-            return sb.toString();
-        } catch (Exception e) {
-            return String.valueOf(url.hashCode());
-        }
     }
 
     private static JsonElement getJson(String url) {
-        final Path cacheFile = getCacheDir().resolve(hashUrl(url) + ".json");
-
-        // Try network first
         for (int i = 0; i < 5; i++) {
             try {
-                final String response = IOUtils.toString(new URL(url), StandardCharsets.UTF_8);
-                final JsonElement element = JsonParser.parseString(response);
-                // Cache successful response
-                try {
-                    Files.writeString(cacheFile, response);
-                } catch (Exception e) {
-                    LOGGER.error("Failed to cache response", e);
-                }
-                return element;
+                return JsonParser.parseString(IOUtils.toString(new URL(url), StandardCharsets.UTF_8));
             } catch (Exception e) {
-                LOGGER.error("Network attempt " + (i + 1) + " failed for: " + url, e);
+                LOGGER.error("", e);
             }
             try {
                 Thread.sleep(1000);
@@ -95,45 +51,20 @@ public class BuildTools {
             }
         }
 
-        // Network failed, try reading from cache
-        if (Files.exists(cacheFile)) {
-            try {
-                LOGGER.info("Using cached response for: " + url);
-                return JsonParser.parseString(Files.readString(cacheFile));
-            } catch (Exception e) {
-                LOGGER.error("Failed to read cache", e);
-            }
-        }
-
         return new JsonObject();
     }
 
     public String getFabricVersion() {
-        try {
-            return getJson("https://meta.fabricmc.net/v2/versions/loader/" + minecraftVersion).getAsJsonArray().get(0).getAsJsonObject().getAsJsonObject("loader").get("version").getAsString();
-        } catch (Exception e) {
-            LOGGER.error("Failed to fetch fabric loader version, using fallback: " + fabricLoaderVersionFallback, e);
-            return fabricLoaderVersionFallback;
-        }
+        return getJson("https://meta.fabricmc.net/v2/versions/loader/" + minecraftVersion).getAsJsonArray().get(0).getAsJsonObject().getAsJsonObject("loader").get("version").getAsString();
     }
 
     public String getYarnVersion() {
-        try {
-            return getJson("https://meta.fabricmc.net/v2/versions/yarn/" + minecraftVersion).getAsJsonArray().get(0).getAsJsonObject().get("version").getAsString();
-        } catch (Exception e) {
-            LOGGER.error("Failed to fetch yarn version, using fallback: " + yarnVersionFallback, e);
-            return yarnVersionFallback;
-        }
+        return getJson("https://meta.fabricmc.net/v2/versions/yarn/" + minecraftVersion).getAsJsonArray().get(0).getAsJsonObject().get("version").getAsString();
     }
 
     public String getFabricApiVersion() {
-        try {
-            final String modIdString = "fabric-api";
-            return new ModId(modIdString, ModProvider.MODRINTH).getModFiles(minecraftVersion, ModLoader.FABRIC, "").get(0).fileName.split(".jar")[0].replace(modIdString + "-", "");
-        } catch (Exception e) {
-            LOGGER.error("Failed to fetch fabric API version, using fallback: " + fabricApiVersionFallback, e);
-            return fabricApiVersionFallback;
-        }
+        final String modIdString = "fabric-api";
+        return new ModId(modIdString, ModProvider.MODRINTH).getModFiles(minecraftVersion, ModLoader.FABRIC, "").get(0).fileName.split(".jar")[0].replace(modIdString + "-", "");
     }
 
     public String getForgeVersion() {
@@ -144,13 +75,8 @@ public class BuildTools {
         if (minecraftVersion.equals("1.20.4")) {
             return "9.0.0";
         }
-        try {
-            final String modIdString = "modmenu";
-            return new ModId(modIdString, ModProvider.MODRINTH).getModFiles(minecraftVersion, ModLoader.FABRIC, "").get(0).fileName.split("\\.jar")[0].replace(modIdString + "-", "");
-        } catch (Exception e) {
-            LOGGER.error("Failed to fetch modmenu version, using fallback: " + modMenuVersionFallback, e);
-            return modMenuVersionFallback;
-        }
+        final String modIdString = "modmenu";
+        return new ModId(modIdString, ModProvider.MODRINTH).getModFiles(minecraftVersion, ModLoader.FABRIC, "").get(0).fileName.split("\\.jar")[0].replace(modIdString + "-", "");
     }
 
     public String getMCVersionNumber() {
